bug fix for Issue 12890 - Show full result view in query interface too small
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@12676 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/QueryInterface/qi.css
+++ b/extensions/SMWHalo/skins/QueryInterface/qi.css
@@ -356,13 +356,6 @@ a.plusminus{
   width:16px;
 }
 
-
-#fullpreview{
-/*  overflow: auto;
-  vertical-align: top;  */
-}
-
-
 .subquerycell{
   border-left:1px solid;
   border-color: #AAAAAA;
